--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ title: "Mindful Snaps Photography"
 subtitle: "More than just images..."
 author: "Stephan Broecker"
 header:
- title: "Mindful Snaps Photography"
- subtitle: "Stephan Broecker"
+ title: "Mindful Snaps Photography  "
+ subtitle: "images"
 footer:
  name: "Mindful Snaps Photography"
  bio: "All Images Copyright (C) Stephan Broecker."
